kubeapps/charts-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps
  labels:
    app: kubeapps
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: kubeapps
spec:
  tls:
  - hosts:
    - app.kstonedata.com.cn
    secretName: app-tls
  rules:
  - host: app.kstonedata.com.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeapps-dashboard-ui
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps
  labels:
    app: kubeapps
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: default
spec:
  tls:
  - hosts:
    - app.kstonedata.com.cn
    secretName: app-tls
  rules:
  - host: app.kstonedata.com.cn
    http:
      paths:
      - path: /api
        backend:
          serviceName: kubernetes
          servicePort: 443
